вывод строк из бд

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,18 @@
-<ul>
-  {% for item in data %}
-     <h1>{{item.name}}</h1> 
-  {% endfor %}
-</ul>
-
-
-  <html>
-    <!-- <html>
+<html>
+  <!-- <html>
       <meta http-equiv="refresh" content="5" >
     </html> -->
-    <body>
-      <button type="button" onclick="myFunction()">Кликни меня</button>
-        {% for item in data %}
-        <p id="demo"> Привет!2 {{item.name}}</p>
-        {% endfor %}
-      <script>
-        function myFunction() {
-          document.querySelectorAll("#demo").forEach(el =>{
-            el.innerHTML += ' нажали'
-          }) ;
-        }
+  <body>
+    <button type="button" onclick="myFunction()">Кликни меня</button>
+    {% for item in data %}
+    <p id="demo">{{item}}</p>
+    {% endfor %}
+    <script>
+      function myFunction() {
+        document.querySelectorAll('#demo').forEach((el) => {
+          console.log('hi')
+        })
+      }
     </script>
-
-    </body>
-  </html>
+  </body>
+</html>
