--- a/templates/index.html
+++ b/templates/index.html
@@ -1,41 +1,21 @@
 <html>
   <head>
+    <meta charset="UTF-8" />
     <!-- <link rel="stylesheet" type="text/css" href="{{ url_for( 'static', filename='style.css', v=1)}}"> -->
-    <link rel="stylesheet" type="text/css" href="{{ url_for( 'static', filename='style.css')}}">
-  </head>
-  <body>
-      <h1>Вагоны</h1>
-      {% if data %}
-      <table>
-        <tbody class="tables">
-          <tr>
-            {% for item in table %}
-            <th>{{item}}</th>
-            {% endfor %}
-          </tr>
-          {% for vagons in data %}
-          <tr>
-            {% for vagon in vagons %}
-            <td>{{ vagon }}</td>
-            {% endfor %}
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% endif %}
-    </div>
-  </body>
-</html>
-
-
-<!-- <button type="button" onclick="myFunction()">Кликни меня</button>
-    {% for item in data %}
-    <p id="demo">{{item}}</p>
-    {% endfor %}
-    <script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for( 'static', filename='style.css')}}"
+    />
+    <!-- <script>
       function myFunction() {
-        document.querySelectorAll('#demo').forEach((el) => {
           console.log('hi')
-        })
       }
     </script> -->
+  </head>
+  <body>
+    <!-- <button type="button" onclick="myFunction()">Просмотр вагонов</button> -->
+    <a href="{{ url_for('vagons') }}" class="btn">Просмотр вагонов</a>
+    <a href="{{ url_for('from_file') }}" class="btn">Вагоны из файла</a>
+  </body>
+</html>
