--- a/templates/excel.html
+++ b/templates/excel.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -11,4 +11,40 @@
       </p>
     </form>
   </body>
-</html>
+</html> -->
+<head>
+   <script> 
+      function myFunction() {
+       if(document.querySelector('.text_field').getAttribute('style') ==='visibility: hidden'){
+          document.querySelector('.text_field').setAttribute('style', 'visibility: visible')
+          document.querySelector('.btn').innerHTML ='Скрыть файл'
+       }else{
+          document.querySelector('.text_field').setAttribute('style', 'visibility: hidden')
+          document.querySelector('.btn').innerHTML ='Посмотреть файл'
+       }
+      }
+    </script> 
+</head>
+
+<!doctype html>
+    <title>Загрузить новый файл</title>
+    <h1>Загрузить новый файл</h1>
+    <form method=post enctype=multipart/form-data>
+      <input type=file name=file>
+      <input type=submit value=Upload>
+    </form>
+{% with messages = get_flashed_messages() %}
+   {% if messages %}
+      {% for message in messages %}
+         {{ message }}
+      {% endfor %}
+   {% endif %}
+{% endwith %}
+{% if data  %}
+  <button type="button" class='btn' onclick="myFunction()">Посмотреть файл </button>
+{% endif %}
+
+<div class="text_field" style="visibility: hidden">
+  <textarea name="comment" form="usrform" style=" margin-top: 10px;">Enter text here...</textarea>
+</div>
+  </html>
