небольшой fix получения данных по вагонам

--- a/templates/excel.html
+++ b/templates/excel.html
@@ -7,22 +7,23 @@
     />
 </head>
 <!doctype html>
-  <title>Загрузить новый файл</title>
-  <a href="{{ url_for('main') }}" class="btn" >Вернуться</a>
-  <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
-  <div class="content" style="visibility: hidden;">
-      <h1>Загрузить новый файл</h1>
-      <form method=post enctype=multipart/form-data>
-        <input type=file name=file class="inputItem">
-        <input type=submit value=Загрузить>
-      </form>
-      {% with messages = get_flashed_messages() %}
+ {% with messages = get_flashed_messages() %}
       {% if messages %}
         {% for message in messages %}
             <h2>{{ message }}<br></h2>
         {% endfor %}
       {% endif %}
     {% endwith %}
+  <title>Загрузить новый файл</title>
+  <a href="{{ url_for('main') }}" class="btn" >Вернуться</a>
+  <!-- <div class="lds-ring"><div></div><div></div><div></div><div></div></div> -->
+  <!-- <div class="content" style="visibility: hidden;"> -->
+      <h1>Загрузить новый файл</h1>
+      <form method=post enctype=multipart/form-data>
+        <input type=file name=file class="inputItem">
+        <input type=submit value=Загрузить>
+      </form>
+     
   {% if data  %}
     {% if filename%}
       <h3> Файл {{filename}} успешно загружен!</h3>
@@ -34,7 +35,7 @@
     Список вагонов:
     </textarea>
   </div>
-</div>
+<!-- </div> -->
 </html>
   <!-- {% with messages = get_flashed_messages() %}
    {% if messages %}
