--- a/templates/excel.html
+++ b/templates/excel.html
@@ -1,5 +1,6 @@
 <head>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link
       rel="stylesheet"
       type="text/css"
