--- a/templates/excel.html
+++ b/templates/excel.html
@@ -13,9 +13,14 @@
   <!-- <div class="lds-ring"><div></div><div></div><div></div><div></div></div> -->
   <!-- <div class="content" style="visibility: hidden;"> -->
       <h1>Загрузить новый файл</h1>
-      <form id="formFile" method=post enctype=multipart/form-data >
+      <!-- <form id="formFile" method=post enctype=multipart/form-data >
         <input type=file name=file class="inputItem" value="Выбрать файл" onchange="inputFile()">
-        <!-- <input type=submit value=Загрузить> -->
+      </form> -->
+      <form method="post" id="formFile" enctype="multipart/form-data">
+        <label class="input-file">
+             <input type="file" name="file" id="myFile" onchange="inputFile()">        
+             <span class="input-file-btn">Выберите файл</span>
+         </label>
       </form>
       {% with messages = get_flashed_messages() %}
       {% if messages %}
