--- a/templates/excel.html
+++ b/templates/excel.html
@@ -33,7 +33,7 @@
     {% if filename%}
       <p style="font-size: 20px;"> Файл <b style="font-size: 25px">{{filename}} </b>успешно загружен!</p>
     {% endif %}
-    <a class="btn" id="vagonList" onclick="myFunction()">Проверить список вагонов из файла</a>
+    <a class="btn" id="vagonList" onclick="checkList()">Проверить список вагонов из файла</a>
   {% endif %}
   <div class="lds-ring" style="visibility: hidden;"><div></div><div></div><div></div><div></div></div>
   <div class="textField" style="visibility: hidden">
