--- a/templates/excel.html
+++ b/templates/excel.html
@@ -1,6 +1,6 @@
 <head>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    <script src="https://unpkg.com/sweetalert@2.1.2/dist/sweetalert.min.js"></script>
+    <script src="{{ url_for('static', filename='js/sweetalert.min.js') }}"></script>
     <link
       rel="stylesheet"
       type="text/css"
