--- a/templates/excel.html
+++ b/templates/excel.html
@@ -37,10 +37,18 @@
   {% endif %}
   <div class="lds-ring" style="visibility: hidden;"><div></div><div></div><div></div><div></div></div>
   <div class="textField" style="visibility: hidden">
-    <textarea name="comment" form="usrform" style=" width: 20%; height: 60%; font-size: 20px;font-weight: bold" id="textArea">
+    <textarea name="comment" form="usrform" style=" width: 20%; height: 10%; font-size: 20px;font-weight: bold" id="textArea">
     Список вагонов:
     </textarea>
   </div>
+  <table id="tableVagons">
+    <tbody id="tables" class="tables">
+      <tr>
+        <th>№</th>
+        <th>Номер Вагона</th>
+      </tr>
+    </tbody>
+  </table>
 <!-- </div> -->
 </html>
 
