--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 .tables {
   font-size: 25px;
+  display: none;
 }
 
 table {
@@ -26,38 +27,39 @@ th {
   cursor: pointer;
 }
 
-.lds-ring {
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-.lds-ring div {
-  box-sizing: border-box;
+/* стили для loadera */
+.loader {
+  width: 200px;
+  height: 200px;
   display: block;
-  position: absolute;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
-  border: 8px solid #fff;
+  margin: auto;
+  position: relative;
+}
+.loader::after,
+.loader::before {
+  content: '';
+  box-sizing: border-box;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #000 transparent transparent transparent;
+  border: 20px solid #419152;
+  position: absolute;
+  left: 0;
+  top: 0;
+  animation: animloader 2s linear infinite;
 }
-.lds-ring div:nth-child(1) {
-  animation-delay: -0.45s;
+.loader::after {
+  animation-delay: 1s;
 }
-.lds-ring div:nth-child(2) {
-  animation-delay: -0.3s;
-}
-.lds-ring div:nth-child(3) {
-  animation-delay: -0.15s;
-}
-@keyframes lds-ring {
+
+@keyframes animloader {
   0% {
-    transform: rotate(0deg);
+    transform: scale(0);
+    opacity: 1;
   }
   100% {
-    transform: rotate(360deg);
+    transform: scale(1);
+    opacity: 0;
   }
 }
 
