--- a/templates/excel.html
+++ b/templates/excel.html
@@ -35,7 +35,7 @@
     {% endif %}
     <a class="btn" id="vagonList" onclick="checkList()">Проверить список вагонов из файла</a>
   {% endif %}
-  <div class="lds-ring" style="visibility: hidden;"><div></div><div></div><div></div><div></div></div>
+  <span class="loader" style="visibility: hidden"></span>
   <div class="textField" style="visibility: hidden">
     <textarea name="comment" form="usrform" style=" width: 20%; height: 10%; font-size: 20px;font-weight: bold" id="textArea">
     Список вагонов:
