--- a/templates/vagons.html
+++ b/templates/vagons.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="{{ url_for( 'static', filename='css/tableForVagons.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{ url_for( 'static', filename='css/style.css')}}">
 </head>
 <a href="{{ url_for('main') }}" class="btn">Вернуться</a>
 <h1 style="text-align: center;">Вагоны</h1>
