добавил новый файл для вагонов из буфера

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,6 @@
   <body>
     <a href="{{ url_for('vagons') }}" class="btn">Просмотр вагонов</a>
     <a href="{{ url_for('from_file') }}" class="btn">Вагоны из файла</a>
+    <a href="{{ url_for('from_buffer') }}" class="btn">Вагоны из буфера</a>
   </body>
 </html>
