--- a/templates/excel.html
+++ b/templates/excel.html
@@ -1,5 +1,5 @@
 <head>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/excel.js') }}"></script>
     <script src="{{ url_for('static', filename='js/sweetalert.min.js') }}"></script>
     <link
       rel="stylesheet"
@@ -12,7 +12,7 @@
   <a href="{{ url_for('main') }}" class="btn" style="margin-bottom: 1%;">Вернуться</a>
       <form method="post" id="formFile" enctype="multipart/form-data">
         <label class="input-file">
-             <input type="file" name="file" id="myFile" onchange="inputFile()">        
+             <input type="file" name="file" id="myFile">        
              <span class="input-file-btn">Выберите файл</span>
          </label>
       </form>
@@ -27,7 +27,7 @@
     {% if filename%}
       <p style="font-size: 20px;"> Файл <b style="font-size: 25px">{{filename}} </b>успешно загружен!</p>
     {% endif %}
-    <a class="btn" id="vagonList" onclick="checkList()">Проверить список вагонов из файла</a>
+    <a class="btn" id="vagonList">Проверить список вагонов из файла</a>
     <div style='text-align:center; width:100%; font-size: 25px;'><a id="countVag" style="visibility: hidden;">Количество вагонов: </a></div>
   {% endif %}
   <span class="loader" style="visibility: hidden"></span>
