--- a/static/css/style.css
+++ b/static/css/style.css
@@ -163,3 +163,10 @@ body {
 ::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
+
+/* класс поля для ввода текста */
+.area {
+  font-size: 24px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  width: 20%;
+}
