--- a/templates/buffer.html
+++ b/templates/buffer.html
@@ -9,9 +9,15 @@
       src="{{ url_for('static', filename='js/buffer.js') }}"
     ></script>
     <script src="{{ url_for('static', filename='js/sweetalert.min.js') }}"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for( 'static', filename='css/style.css')}}"
+    />
     <title>Вагоны из буфера</title>
   </head>
   <body>
     <h1>Hello World!</h1>
+    <textarea class="area"></textarea>
   </body>
 </html>
