добавлена функция проверки текста из буфера

--- a/templates/buffer.html
+++ b/templates/buffer.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <textarea class="area"></textarea>
+    <textarea class="area" style="max-height: 60%"></textarea>
+    <button id="btnClick">Нажми !</button>
   </body>
 </html>
