в тестовом режиме работа с классом при анализе данных из буфера

--- a/templates/buffer.html
+++ b/templates/buffer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,9 +16,16 @@
     />
     <title>Вагоны из буфера</title>
   </head>
-  <body>
+  <body style="height: 90%">
     <h1>Hello World!</h1>
-    <textarea class="area" style="max-height: 60%"></textarea>
+    <textarea class="area" style="height: 50%; width: 30%">
+      42806576
+      28065753
+      28065753
+      56070600
+      </textarea
+    >
     <button id="btnClick">Нажми !</button>
+    <span class="loader" style="visibility: hidden"></span>
   </body>
 </html>
