--- a/templates/excel.html
+++ b/templates/excel.html
@@ -28,7 +28,8 @@
       <p style="font-size: 20px;"> Файл <b style="font-size: 25px">{{filename}} </b>успешно загружен!</p>
     {% endif %}
     <a class="btn" id="vagonList">Проверить список вагонов из файла</a>
-    <div style='text-align:center; width:100%; font-size: 25px;'><a id="countVag" style="visibility: hidden;">Количество вагонов: </a></div>
+    <div style="margin-top: 3%;"></div>
+    <div style='text-align:center; width:100%; font-size: 25px; margin-bottom: 1%;'><a id="countVag" style="visibility: hidden;">Количество вагонов: </a></div>
   {% endif %}
   <span class="loader" style="visibility: hidden"></span>
   <div class="scroll-table tableAll">
