--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,3 +170,29 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   width: 20%;
 }
+
+.btn-group a {
+  background-color: #419152; /* Green background */
+  border: 1px solid green; /* Green border */
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  margin-right: 1%;
+  cursor: pointer; /* Pointer/hand icon */
+  float: left; /* Float the buttons side by side */
+}
+
+.btn-group a:not(:last-child) {
+  border-right: none; /* Prevent double borders */
+}
+
+/* Clear floats (clearfix hack) */
+.btn-group:after {
+  content: '';
+  clear: both;
+  display: table;
+}
+
+/* Add a background color on hover */
+.btn-group a:hover {
+  background-color: #59be6e;
+}
