--- a/templates/buffer.html
+++ b/templates/buffer.html
@@ -11,7 +11,7 @@
     <title>Загрузка вагонов из буффера</title>
     <div class="btn-group">
       <a href="{{ url_for('main') }}" class="btn" style="margin-bottom: 1%;">Вернуться</a>
-      <a id ="btnClick">Проверить список вагонов !</a>
+      <a id ="btnClick">Проверить список вагонов</a>
       <a id ="btnClear">Очистить</a>
     </div>
     <textarea placeholder="    Необходимо вставить в это окно скопированный 
@@ -20,7 +20,42 @@
                         42806576
                         28065753
                         28065753
-                        56070600" class="area" style="height: 40%; width: 40%"></textarea>
+                        56070600" class="area" style="height: 40%; width: 40%">
+                        42806576
+                        42806576
+                        25607060
+                        42806576
+                        28065753
+                        28065753
+                        56070600
+                        5607060
+                        28065756
+                        28065757
+                        50706009
+                        28065759
+                        28065760
+                        28065761
+                        56070600
+                        28065763
+                        28065764
+                        28065765
+                        28065766
+                        28065767
+                        28065768
+                        28065769
+                        28065770
+                        28065771
+                        28065772
+                        28065773
+                        28065774
+                        28065775
+                        28065776
+                        28065777
+                        28065778
+                        28065779
+                        28065780
+                        28065781
+                        </textarea>
     <span class="loader" style="visibility: hidden"></span>
     <div
       style="text-align: center; width: 100%; font-size: 25px; margin-top: 2%"
