преопределил класс excel для создания таблицы

--- a/templates/buffer.html
+++ b/templates/buffer.html
@@ -68,6 +68,8 @@
           <tr>
             <th>Номер Записи</th>
             <th>Номер Вагона</th>
+            <th>Группа Вагона</th>
+            <th>Наименование</th>
           </tr>
         </thead>
       </table>
