--- a/templates/buffer.html
+++ b/templates/buffer.html
@@ -14,13 +14,7 @@
       <a id ="btnClick">Проверить список вагонов</a>
       <a id ="btnClear">Очистить</a>
     </div>
-    <textarea placeholder="    Необходимо вставить в это окно скопированный 
-    текст из буффера и проверить содержание. 
-    Например: 
-                        42806576
-                        28065753
-                        28065753
-                        56070600" class="area" style="height: 40%; width: 40%">
+    <textarea placeholder="Вставьте текст..." class="area" style="height: 40%; width: 40%">
                         42806576
                         42806576
                         25607060
